# modbus-ccmp25

./: CLAUDE.md  CMakeLists.txt  ics_dual_nic.camkes  ics_stm32mp25x.camkes  ics_vm_stm32mp25x.camkes  settings.cmake
components/ICS_Inbound/: ICS_Inbound.c
components/ICS_Outbound/: ICS_Outbound.c
components/VirtIO_Net0_Driver/: lwipopts.h  virtio_net0_driver.c
components/VirtIO_Net1_Driver/: lwipopts.h  virtio_net1_driver.c
components/WatchdogKicker/: WatchdogKicker.c
components/include/: EverParse.h  EverParseEndianness.h  ModbusTCP_v3_Simple.c  ModbusTCP_v3_Simple.h  ModbusTCP_v3_SimpleWrapper.c  ModbusTCP_v3_SimpleWrapper.h  common.h  connection_state.h  control_queue.h  debug_levels.h  everparse_error_handler.h  modbus_policy.h  pbuf_tracking.h  version.h
components/lib/: everparse_error_handler.c  ringbuf.c  ringbuf.h
deploy/: .gitignore  Makefile  boot.cmd  install.cmd  restore.cmd
docs/: alignment_report_20260305.md  build-readiness-analysis.md  change_management_audit.md  elfloader_bss_investigation.md  gap_analysis_20260302.md  optee_smc_interfaces.md  rcc_clock_investigation.md  rifsc_dwmac_investigation.md  vm-migration-reference.md
docs/rifsc_dwmac_evidence/: clock_rcc_registers.txt  eth1_dts_node.dts  optee_rifprot_eth.dtsi  rifsc_peripheral_ids.h
linux/: .gitignore  setup-kernel.sh  stm32mp25x-guest.dts
plat_include/stm32mp25x/plat/: vmlinux.h
stm32mp25x/: devices.camkes
